--- a/style.css
+++ b/style.css
@@ -35,6 +35,21 @@ img{
     transition:transform 0.25s ease;
 }
 
+
+#gallery-gif{
+    width:80%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-left: 8%;
+}
+
+.gif{
+    width:25%;
+    height: 25%;
+}
+
 #scroll{
     height:90vh;
     overflow-y: scroll;
